--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
-    <link rel="stylesheet" href="src/css/index.css">
+    <link rel="stylesheet" href="src/index.css">
 </head>
 <body>
     <h3>Score: <span id="score"> </span></h3>
